test_programs/compile_failure/noirc_frontend_tests_aliases_disallows_numeric_type_aliases_to_type/src/main.nr

    type Foo: u32 = u32;

    fn main(a: Foo) -> pub Foo {
        a
    }
    